# Meeting

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 0002_init_schema.sql  001_init.sql
backend/src/: app.rs  main.rs  state.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs  pg_connect.rs  query.rs
backend/src/dto/: auth.rs
backend/src/handlers/: all_services.rs  login.rs  mod.rs  register.rs
backend/src/middleware/: auth_check.rs  logger.rs  mod.rs  role_middleware.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  meeting.rs  mod.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  response.rs
