[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tower-http = { version = "0.6.6", features = ["cors"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6",features = ["runtime-tokio","postgres","uuid","chrono","macros"]}
jsonwebtoken = "10.3.0"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }
bcrypt = "0.18.0"
